<resources>
    <string name="app_name">Peter\'s NoteList</string>

<!--Note Activity-->
    <string name="textNotes">Notes: </string>
    <string name="textTitle">Title</string>
    <string name="textEnterTextHere">Enter Text Here</string>
    <string name="textBodyText">Body Text</string>
    <string name="textSave">Save</string>
    <string name="textPriority">Priority</string>
    <string name="textHigh">High</string>
    <string name="textMedium">Medium</string>
    <string name="textLow">Low</string>

    <string name="textSortBy">Sort By:</string>
    <string name="textSortTitle">Title</string>
    <string name="textSortPriority">Priority Level</string>
    <string name="textSortDateCreated">Date Created</string>

    <string name="textSortOrder">Sort Order:</string>
    <string name="radioAscending">Ascending</string>
    <string name="radioDescending">Descending</string>

    <string name="textDelete">Delete</string>

</resources>
