<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:id="@+id/activity_settings">

    <!--    Navigation Bar-->
    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_navbar_background"
        android:padding="10dp">


        <ImageButton
            android:id="@+id/imageButtonAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_toStartOf="@+id/imageButtonList"
            android:layout_toLeftOf="@+id/imageButtonList"
            android:background="@color/color_transparent"
            app:srcCompat="@drawable/icon_add_96" />

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/color_transparent"
            app:srcCompat="@drawable/icon_list_96" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/imageButtonList"
            android:layout_toRightOf="@+id/imageButtonList"
            android:background="@color/color_transparent"
            app:srcCompat="@drawable/icon_settings_96" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/ScrollViewSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navbar" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textSortBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/textSortBy"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupSortBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textSortBy" >

                <RadioButton
                    android:id="@+id/radioButtonSortTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textSortTitle" />

                <RadioButton
                    android:id="@+id/radioButtonSortPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textSortPriority" />

                <RadioButton
                    android:id="@+id/radioButtonSortDateCreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textSortDateCreated" />

            </RadioGroup>


            <TextView
                android:id="@+id/textSortOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroupSortBy"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/textSortOrder"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupSortOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textSortOrder"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButtonAscending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioAscending" />

                <RadioButton
                    android:id="@+id/radioButtonDescending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioDescending" />

            </RadioGroup>



        </RelativeLayout>

    </ScrollView>


</RelativeLayout>